--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
  <meta http-equiv="Content-Type"content="text/html;charset=en">
 <body>
 
-<h2 style="text-align:center">Global Starlite L.L.C.</h2><br/>
+<h1 style="text-align:center">Global Starlite L.L.C.</h1><br/>
 <br/><br/>
+
+<h2 style="text-align:center">
 <div> Global Starlite L.L.C. is a company providing software solutions, mobile applications and etc.
 </div><br/><br/>
+</h2>
 
  
 </body>
