--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <h1 style="text-align:center">Global Starlite L.L.C.</h1><br/>
 <br/><br/>
 
+<div>
 <h2 style="text-align:center">
-<div> Global Starlite L.L.C. is a company providing software solutions, mobile applications and etc.
-</div><br/><br/>
+ Global Starlite L.L.C. is a company providing software solutions, mobile applications and etc.
 </h2>
+</div><br/><br/>
 
  
 </body>
